--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ llama-index-core>=0.12.4,<0.13.0
 llama-index-llms-ollama>=0.5.4
 llama-index-embeddings-huggingface>=0.5.2
 llama-index-readers-file>=0.1.3
+pypdf
